--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.14.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
     "react-iframe": "^1.8.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "react-window": "^1.8.5",
+    "universal-cookie": "^4.0.4",
     "youtube-api-search": "0.0.5"
   },
   "scripts": {
