--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# data
+./src/data/artists.js
+./src/data/dnbartists.js
+./src/data/dnbcheck.js
+
+#mon
+/.vscode
