--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "album-art": "^2.0.2",
     "fontsource-roboto": "^3.0.3",
     "node-fetch": "^2.6.1",
     "react": "^16.14.0",
