--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
     "react-iframe": "^1.8.0",
+    "react-player": "^2.7.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "react-window": "^1.8.5",
