--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "album-art": "^2.0.2",
     "fontsource-roboto": "^3.0.3",
+    "match-sorter": "^6.0.2",
     "node-fetch": "^2.6.1",
     "react": "^16.14.0",
     "react-cookie": "^4.0.3",
