--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "album-art": "^2.0.2",
     "fontsource-roboto": "^3.0.3",
     "match-sorter": "^6.0.2",
+    "material-ui-image": "^3.3.1",
     "node-fetch": "^2.6.1",
     "react": "^16.14.0",
     "react-cookie": "^4.0.3",
