--- a/.gitignore
+++ b/.gitignore
@@ -18,14 +18,17 @@
 .env.test.local
 .env.production.local
 
+#api keys
+.env
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # data
-./src/data/artists.js
-./src/data/dnbartists.js
-./src/data/dnbcheck.js
+/src/data/newNewSongOptions.js
+/src/data/oldSongOptions.js
+debug.log
 
 #mon
 /.vscode
