--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "album-art": "^2.0.2",
+    "env": "0.0.2",
     "fontsource-roboto": "^3.0.3",
     "match-sorter": "^6.0.2",
     "material-ui-image": "^3.3.1",
